Add NeedsPreferredWidthsRecalculation() for block

In the case the block has relative height and width is auto and
it has an image which should keep the aspect ratio,
it needs preferred width recalculation if the parent changes the height.
To cover this, add NeedsPreferredWidthsRecalculation() for LayoutBlock.

BUG=707151, 514663, 709233

Review-Url: https://codereview.chromium.org/2828453002
Cr-Commit-Position: refs/heads/master@{#466934}

Former-commit-id: 76e307f44292b2999535aa8c5605cfd9129e9c12